--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="keywords" content="crypto, mining, animation, example, examples">
-		<meta name="author" content="Creativegigs">
-		<meta name="description" content="cryto is a beautiful website template designed for bitcoin crypto currency mining and exchange websites.">
+		<meta name="author" content="Creativegigabytes_g2">
+		<meta name="description" content="Bringing Bitcoin to DeFi">
 		<meta name='og:image' content='images/home/ogg.png'>
 		<!-- For IE -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
