--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<div class="round-shape-three"></div>
 						<div class="container">
 							<div class="main-text-wrapper">
-								<h1> The Digg <br>Revolution has begun.</h1>
+								<h1> The Digg <br>Revolution Has Begun</h1>
 								<p>A revolutionary DeFi coin for the future Bitcoin.</p>
 								<ul class="button-group clearfix">
 									<li><a href="#">Whitepaper</a></li>
